--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <p class="book-description">
                     An exploration of how ancient wisdom traditions, suppressed scientific lineages, and field-based consciousness have persisted through history. This trilogy traces the carriers of resonant physics—from mystics to mavericks—and examines how consciousness shapes reality through coherence and intention.
                 </p>
-                <a href="./books/Carriers/index.html" class="book-link">Read The Carriers ⟶</a>
+                <a href="./books/carriers/index.html" class="book-link">Read The Carriers ⟶</a>
             </div>
             
             <div class="book-card">
@@ -294,7 +294,7 @@
                 <p class="book-description">
                     A radical reconceptualization of trauma and healing through field physics. Introduces the Field Geometry Atlas, Resonance Profile Scan (RPS), and Field Integration Protocol-5 (FIP-5)—bridging neuroscience, somatic therapy, quantum mechanics, and thermodynamics into a unified therapeutic framework.
                 </p>
-                <a href="./books/Trauma%20as%20Field%20Mechanics/index.html" class="book-link">Read Field Mechanics ⟶</a>
+                <a href="./books/trauma/index.html" class="book-link">Read Field Mechanics ⟶</a>
             </div>
         </div>
         
