--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@
                 <a href="./trauma/index.html" class="book-link">Read Field Mechanics ⟶</a>
             </div>
         </div>
+
+           <div class="book-card">
+                <div class="book-number">Book Three</div>
+                <h2 class="book-title">△HV: Delta Harmonic Vector Theory</h2>
+                <p class="book-subtitle">A Complete Framework for Resonant Emergence Across Scales</p>
+                <p class="book-description">
+                   A coherence grammar for emergent systems—the structural ontology that quantum mechanics implied but consensus physics refused to follow. Maps how consciousness, agency, and meaning stabilize across scales from quantum fluctuations to planetary resonance. Not metaphysics masquerading as science, but the pre-theoretical substrate where systems become describable at all. Fully formalized with tensor field equations, stability analysis, and testable predictions. The mathematics that works when you stop pretending observation doesn't participate.
+                </p>
+                <a href="./dhv/index.html" class="book-link">Read △HV Theory ⟶</a>
+            </div>
+        </div>
         
         <div class="divider">✦</div>
         
