--- a/index.html
+++ b/index.html
@@ -298,6 +298,8 @@
             </div>
         </div>
 
+        <div class="divider">✦</div>
+        
            <div class="book-card">
                 <div class="book-number">Book Three</div>
                 <h2 class="book-title">△HV: Delta Harmonic Vector Theory</h2>
