--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <p class="book-description">
                    A coherence grammar for emergent systems—the structural ontology that quantum mechanics implied but consensus physics refused to follow. Maps how consciousness, agency, and meaning stabilize across scales from quantum fluctuations to planetary resonance. Not metaphysics masquerading as science, but the pre-theoretical substrate where systems become describable at all. Fully formalized with tensor field equations, stability analysis, and testable predictions. The mathematics that works when you stop pretending observation doesn't participate.
                 </p>
-                <a href="./dhv/index.html" class="book-link">Read △HV Theory ⟶</a>
+                <a href="./DHV/index.html" class="book-link">Read △HV Theory ⟶</a>
             </div>
         </div>
         
