--- a/DHV/index.html
+++ b/DHV/index.html
@@ -508,7 +508,9 @@
 </p>
                 <p>Quantum studies disproved the reductionist assumptions underlying that consensus decades ago. What keeps those assumptions alive is not their correspondence to truth, but the survival of systems that depend on them. Institutions resist paradigm shifts not because the evidence is lacking, but because the infrastructure is invested.</p>
                 
-                <p><em>It is none of these.</em></p>
+                <p><em>ΔHV asks only to be placed correctly, not believed prematurely.</em></p>
+
+                <p>It is a coherence grammar: a pre-axiomatic structural framework describing how stable patterns of meaning, agency, and structure emerge across scales—including but not limited to physical systems.</p>
                 
                 <p>ΔHV is a coherence grammar: a pre-axiomatic structural framework describing how stable patterns of meaning, agency, and structure emerge across scales—including but not limited to physical systems.</p>
             </div>
