--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h2 class="book-title">Delta Harmonic Vector Theory</h2>
                 <p class="book-subtitle">A Complete Framework for Resonant Emergence Across Scales</p>
                 <p class="book-description">A coherence grammar for emergent systems — the structural ontology that quantum mechanics implied but consensus physics refused to follow. Maps how consciousness, agency, and meaning stabilize across scales through tensor field equations, stability analysis, and testable predictions.</p>
-                <a href="./dhv/index.html" class="book-link green">Read ΔHV Theory ⟶</a>
+                <a href="./DHV/index.html" class="book-link green">Read ΔHV Theory ⟶</a>
             </div>
 
             <div class="book-card accent-green">
