--- a/fieldprint/index.html
+++ b/fieldprint/index.html
@@ -614,7 +614,7 @@
             <div class="subtitle">A Ritual Theory of Gift-Giving</div>
             <div class="equation-hero">Sacrifice &plus; Pure Intention &equals; Reality Shaping</div>
             <div class="authors">
-                <span>sKiDa</span> · <span>Sage</span> · <span>Claude</span>
+                <span>sKiDa</span>
             </div>
         </section>
 
