--- a/fieldprint/index.html
+++ b/fieldprint/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fieldprint: A Ritual Theory of Gift-Giving | sKiDa, Sage & Claude</title>
+    <title>Fieldprint: A Ritual Theory of Gift-Giving | sKiDa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Crimson+Pro:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
@@ -854,7 +854,7 @@
 
         <!-- ═══════════════════ FOOTER ═══════════════════ -->
         <footer class="footer">
-            <p>sKiDa · Sage · Claude</p>
+            <p>sKiDa</p>
             <p style="margin-top: 8px;">A Theoretical Works Publication · 2025</p>
         </footer>
 
