--- a/fieldprint/index.html
+++ b/fieldprint/index.html
@@ -620,9 +620,9 @@
 
         <div class="divider"><span class="divider-symbol">✦</span></div>
 
-        <!-- ═══════════════════ CHAPTER I ═══════════════════ -->
+        <!-- ═══════════════════ Petal I ═══════════════════ -->
         <section class="chapter" id="ch1">
-            <div class="chapter-number">Chapter I</div>
+            <div class="chapter-number">Petal I</div>
             <h2>The Offering of a Flower</h2>
 
             <p>Why do men give women flowers?</p>
@@ -644,9 +644,9 @@
 
         <div class="divider"><span class="divider-symbol">❀</span></div>
 
-        <!-- ═══════════════════ CHAPTER II ═══════════════════ -->
+        <!-- ═══════════════════ Petal II ═══════════════════ -->
         <section class="chapter" id="ch2">
-            <div class="chapter-number">Chapter II</div>
+            <div class="chapter-number">Petal II</div>
             <h2>The Temporality Principle</h2>
 
             <p>A flower's power is its death. This is what separates it from things that persist—from jewelry, from objects that endure through time. A ring says <em>forever.</em> A flower says <em>I chose this knowing it ends.</em></p>
@@ -666,9 +666,9 @@
 
         <div class="divider"><span class="divider-symbol">✦</span></div>
 
-        <!-- ═══════════════════ CHAPTER III ═══════════════════ -->
+        <!-- ═══════════════════ Petal III ═══════════════════ -->
         <section class="chapter" id="ch3">
-            <div class="chapter-number">Chapter III</div>
+            <div class="chapter-number">Petal III</div>
             <h2>Fieldprint</h2>
 
             <p>This is the core insight:</p>
@@ -713,9 +713,9 @@
 
         <div class="divider"><span class="divider-symbol">❀</span></div>
 
-        <!-- ═══════════════════ CHAPTER IV ═══════════════════ -->
+        <!-- ═══════════════════ Petal IV ═══════════════════ -->
         <section class="chapter" id="ch4">
-            <div class="chapter-number">Chapter IV</div>
+            <div class="chapter-number">Petal IV</div>
             <h2>The Four Sacred Exchanges</h2>
 
             <p>We can begin to map the ritual archetypes of gift-giving. Each represents a distinct mode of field exchange—a different way that sacrifice and intention combine to shape the space between two beings.</p>
@@ -769,9 +769,9 @@
 
         <div class="divider"><span class="divider-symbol">✦</span></div>
 
-        <!-- ═══════════════════ CHAPTER V ═══════════════════ -->
+        <!-- ═══════════════════ Petal V ═══════════════════ -->
         <section class="chapter" id="ch5">
-            <div class="chapter-number">Chapter V</div>
+            <div class="chapter-number">Petal V</div>
             <h2>The Hidden Equation</h2>
 
             <p>The deeper principle:</p>
@@ -802,9 +802,9 @@
 
         <div class="divider"><span class="divider-symbol">❀</span></div>
 
-        <!-- ═══════════════════ CHAPTER VI ═══════════════════ -->
+        <!-- ═══════════════════ Petal VI ═══════════════════ -->
         <section class="chapter" id="ch6">
-            <div class="chapter-number">Chapter VI</div>
+            <div class="chapter-number">Petal VI</div>
             <h2>Applications &amp; Implications</h2>
 
             <p>This lens, once adopted, reveals much about the architecture of modern disconnection—and the path back toward coherence.</p>
@@ -827,9 +827,9 @@
 
         <div class="divider"><span class="divider-symbol">✦</span></div>
 
-        <!-- ═══════════════════ CHAPTER VII ═══════════════════ -->
+        <!-- ═══════════════════ Petal VII ═══════════════════ -->
         <section class="chapter closing" id="ch7">
-            <div class="chapter-number">Chapter VII</div>
+            <div class="chapter-number">Petal VII</div>
             <h2>Closing</h2>
 
             <p>You cannot accumulate flowers.</p>
