--- a/fieldprint/index.html
+++ b/fieldprint/index.html
@@ -615,6 +615,7 @@
             <div class="equation-hero">Sacrifice &plus; Pure Intention &equals; Reality Shaping</div>
             <div class="authors">
                 <span>sKiDa</span>
+            <div class="subtitle">A Ritual Theory of Gift-Giving</div>
             </div>
         </section>
 
