--- a/fieldprint/index.html
+++ b/fieldprint/index.html
@@ -615,7 +615,7 @@
             <div class="equation-hero">Sacrifice &plus; Pure Intention &equals; Reality Shaping</div>
             <div class="authors">
                 <span>sKiDa</span>
-            <div class="subtitle">A Ritual Theory of Gift-Giving</div>
+            <div class="subtitle">To the Rose that taught me the true meaning of sacrifice.</div>
             </div>
         </section>
 
